<resources>
    <string name="app_name">OmdbApiTestApp</string>
    <string name="no_results">No results</string>
    <string name="input_movie_title_here">input movie title here</string>
    <string name="search">search</string>
    <string name="title">Title:</string>
    <string name="year">Year:</string>
    <string name="type">Type:</string>
    <string name="watch_later">Watch later</string>
    <string name="watched">Watched</string>
    <string name="imdb_rating">IMDB Rating: </string>
    <string name="people_voted_on_imdb">People voted on IMDB: </string>
    <string name="released">Released: </string>
    <string name="country">Country: </string>
    <string name="language">Language: </string>
    <string name="director">Director: </string>
    <string name="production">Production: </string>
    <string name="genre">Genre: </string>
    <string name="runtiime">Runtiime: </string>
    <string name="actors">Actors: </string>
    <string name="plot">Plot: </string>
</resources>
