<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/poster_image"
        android:layout_width="64dp"
        android:layout_height="128dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/poster_preview" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/poster_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/poster_image"
        app:layout_constraintTop_toTopOf="@+id/poster_image">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/title"
            app:layout_constraintTop_toTopOf="@+id/title"
            tools:text="The Fatality" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/year"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/year"
            app:layout_constraintTop_toTopOf="@+id/year"
            tools:text="2009" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/type"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/year"
            app:layout_constraintTop_toBottomOf="@+id/year" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toTopOf="@+id/type"
            tools:text="movie" />

        <CheckBox
            android:id="@+id/watch_later_check"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/watch_later_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_later"
            app:layout_constraintBottom_toBottomOf="@+id/watch_later_check"
            app:layout_constraintStart_toEndOf="@+id/watch_later_check"
            app:layout_constraintTop_toTopOf="@+id/watch_later_check" />

        <CheckBox
            android:id="@+id/watched_check"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/watch_later_text"
            app:layout_constraintTop_toTopOf="@+id/watch_later_check" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/watched_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watched"
            app:layout_constraintBottom_toBottomOf="@+id/watched_check"
            app:layout_constraintStart_toEndOf="@+id/watched_check"
            app:layout_constraintTop_toTopOf="@+id/watched_check" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
